feat: create configmap from RPC (#91)
