# api/v1/cluster_manager_server.swagger.json
@@ -334,12 +334,6 @@
       "properties": {
         "devicePluginConfig": {
           "$ref": "#/definitions/v1DevicePluginConfig"
-        },
-        "devicePluginConfigmapName": {
-          "type": "string"
-        },
-        "devicePluginConfigmapNamespace": {
-          "type": "string"
         }
       }
     },
